fixed image overflow issue on nav header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,23 +8,10 @@
 }
 
 .App-header {
-  height: 90px;
+  background-color: #222;
+  height: 150px;
   padding: 20px;
   color: white;
-}
-
-.Nav-header {
-  background-color: #005172;
-  color: #fff;
-  height: 70px;
-  padding: 20px;
-  border-radius: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 0;
-  padding-right: 0;
-  border-top: 1px solid #444;
-  border-bottom: 1px solid #444;
 }
 
 .App-title {
@@ -33,10 +20,6 @@
 
 .App-intro {
   font-size: large;
-}
-
-.navbar-brand {
-    padding: 0px 15px;
 }
 
 @keyframes App-logo-spin {
